--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,26 @@
         padding: 0;
         margin: 0;
         box-sizing: border-box;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
       }
+    </style>
+    <style>
+      body::-webkit-scrollbar {
+        width: 10px;
+      }
+
+      body::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        background-color: #494949;
+      }
+
+      body::-webkit-scrollbar-thumb {
+        background: #8661b6;
+        /* border: 1px solid #494949; */
+      }
+      body::-webkit-scrollbar-thumb:hover {
+      background: #a98fde;
+    }
     </style>
   </head>
   <body>
