--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,35 @@
     />
     <title>MarketPlace</title>
     <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: 'Roboto', sans-serif;
+        * {
+          padding: 0;
+          margin: 0;
+          box-sizing: border-box;
+          font-family: 'Roboto', sans-serif;
+        }
+
+        /* width */
+      body::-webkit-scrollbar {
+        width: 10px;
       }
+
+      /* Track */
+      body::-webkit-scrollbar-track {
+        background: transparent;
+      }
+
+      /* Handle */
+      body::-webkit-scrollbar-thumb {
+        background: #8661b6;
+        /* border: 1px solid #494949; */
+      }
+
+      /* Handle on hover */
+      body::-webkit-scrollbar-thumb:hover {
+        background: #a98fde;
+      }
+
+        }
     </style>
   </head>
   <body>
